[package]
name = "distil"
version = "0.1.0"
authors = ["Hasan Gondal <uh@hasan.wtf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
base64 = "0.12.3"
byteorder = "1.3.4"
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
reqwest = { version = "0.10.8", features = ["json", "brotli", "rustls-tls"] }